crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_expr_varvarpos.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "VariableVariable": {
              "kind": {
                "VariableVariable": {
                  "kind": {
                    "Variable": "x"
                  },
                  "span": {
                    "start": 8,
                    "end": 10
                  }
                }
              },
              "span": {
                "start": 7,
                "end": 10
              }
            }
          },
          "span": {
            "start": 6,
            "end": 10
          }
        }
      },
      "span": {
        "start": 6,
        "end": 11
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 11
  }
}
